# map_editor_qt6

./: README.md
Project_QT/: CMakeLists.txt  CMakePresets.json
Project_QT/data/800/: borders.xml  creatures.xml  grounds.xml  tilesets.xml  walls_extra.xml
Project_QT/docs/: Task81_BrushPersistence_Documentation.md  Task82_SearchFunctionality_Documentation.md  Task83_EnhancedRendering_Documentation.md  Task84_MapIO_Documentation.md
Project_QT/src/: AdvancedAttributeSystemTest.cpp  Animator.cpp  Animator.h  ApplicationSettingsManager.h  AutoBorder.cpp  AutoBorder.h  AutoBorderData.cpp  AutoBorderData.h  BorderSystem.cpp  BorderSystem.h  Brush.cpp  Brush.h  BrushCommon.h  BrushInteractionController.cpp  BrushInteractionController.h  BrushManager.cpp  BrushManager.h  BrushManagerHelpers.cpp  BrushManagerTest.cpp  BrushPersistence.cpp  BrushPersistence.h  CarpetBrush.cpp  CarpetBrush.h  CarpetBrushTest.cpp  ClipboardData.cpp  ClipboardData.h  ClipboardManager.cpp  ClipboardManager.h  CodebaseAnalysisReport.md  ContainerItem.cpp  ContainerItem.h  Creature.cpp  Creature.h  CreatureBrush.cpp  CreatureBrush.h  CreatureManager.cpp  CreatureManager.h  CreatureProperties.h  CreatureSpriteManager.cpp  CreatureSpriteManager.h  (+193 more)
Project_QT/src/commands/: HouseTownCommands.cpp  HouseTownCommands.h  ModifySpawnCommand.cpp  ModifySpawnCommand.h  SelectionCommands.h  SetItemAttributeCommand.cpp  SetItemAttributeCommand.h  TileLockCommands.cpp  TileLockCommands.h  TilePropertyCommand.cpp  TilePropertyCommand.h
Project_QT/src/integration/: HouseTownIntegrationManager.h  MinimapIntegration.h  ProgressIntegration.cpp  ProgressIntegration.h  SpawnIntegrationManager.h  TilesetIntegrationManager.cpp  TilesetIntegrationManager.h
Project_QT/src/io/: MapFormatManager.cpp  MapFormatManager.h  MapVersionConverter.cpp  MapVersionConverter.h  OTBMMapLoader.cpp  OTBMMapLoader.h  OTMMMapLoader.cpp  OTMMMapLoader.h  OtbmReader.cpp  OtbmReader.h  OtbmVersionConverter.cpp  OtbmVersionConverter.h  OtbmWriter.cpp  OtbmWriter.h  QtBinaryFile.cpp  QtBinaryFile.h
Project_QT/src/managers/: TilesetBehaviorManager.h
Project_QT/src/network/: LiveCursor.cpp  LiveCursor.h  LivePackets.h  NetworkController.cpp  NetworkController.h  NetworkMessage.cpp  NetworkMessage.h
Project_QT/src/operations/: ReplaceOperationManager.h
Project_QT/src/persistence/: HouseTownPersistenceManager.h
Project_QT/src/rendering/: MinimapRenderer.h  SpawnVisualizationManager.h
Project_QT/src/search/: ItemPropertyMatcher.h
Project_QT/src/selection/: EnhancedSelectionBrush.h  SelectionTransformationEngine.h  SelectionVisualFeedback.h
Project_QT/src/tests/: AdvancedDialogsTest.cpp  ApplicationSettingsTest.cpp  AutoBorderTest.cpp  BorderSystemIntegrationTest.cpp  BrushImplementationTest.cpp  BrushInterfaceTest.cpp  BrushPalettePanelTest.cpp  BrushPersistenceTest.cpp  BuildSystemTest.cpp  CreatureSpawnIntegrationTest.cpp  DrawingPrimitivesTest.cpp  EnhancedRenderingTest.cpp  FlagBrushTest.cpp  GraphicsRenderingTest.cpp  GroundBorderToolTest.cpp  GroundBrushTest.cpp  HouseTownIntegrationTest.cpp  HouseTownSystemTest.cpp  ItemTileFinderTest.cpp  MainPaletteTest.cpp  MapIOTest.cpp  MapSerializationTest.cpp  MapViewEnhancementsTest.cpp  NetworkTest.cpp  OptionalBorderBrushTest.cpp  ProgressDialogIntegrationTest.cpp  PropertyEditorTest.cpp  ResourceManagerTest.cpp  SearchFunctionalityTest.cpp  SelectionBrushTest.cpp  SelectionToolTest.cpp  SpawnVisualizationTest.cpp  SpecializedBrushesTest.cpp  SpriteButtonTest.cpp  TableBrushTest.cpp  TilePropertyEditingTest.cpp  TilePropertyEditorTest.cpp  ToolBarTest.cpp  UIInputPolishTest.cpp  UIStatusSyncTest.cpp  (+3 more)
Project_QT/src/threading/: ProgressWorker.h
Project_QT/src/ui/: AboutDialog.cpp  AboutDialog.h  AutomagicSettingsDialog.cpp  AutomagicSettingsDialog.h  BrushPalettePanel.cpp  BrushPalettePanel.h  BrushPanel.cpp  BrushPanel.h  BrushSizePanel.cpp  BrushSizePanel.h  CreaturePalette.h  DialogManager.cpp  DialogManager.h  EnhancedMapView.h  ExportMiniMapDialog.cpp  ExportMiniMapDialog.h  FindItemDialog.cpp  FindItemDialog.h  FindItemDialogTest.cpp  FindSimilarDialog.h  FocusManagementSystem.h  GotoPositionDialog.cpp  GotoPositionDialog.h  GroundValidationDialog.cpp  GroundValidationDialog.h  HelpSystem.h  HouseEditorDialog.h  HouseSystemTest.cpp  HouseTownActions.h  ImportMapDialog.cpp  ImportMapDialog.h  InputValidationSystem.h  KeyboardNavigationSystem.h  MainPalette.cpp  MainPalette.h  MainWindow.cpp  MainWindow.h  MapTileItem.cpp  MapTileItem.h  MenuActionHandler.cpp  (+52 more)
Project_QT/src/ui/properties/: ItemPropertyEditor.cpp  ItemPropertyEditor.h  ItemPropertyEditorBase.cpp  ItemPropertyEditorBase.h  OldPropertiesWindow.cpp  OldPropertiesWindow.h
Project_QT/tasks/: Task72_Implementation_Summary.md  Task73_Implementation_Summary.md  Task74_Implementation_Summary.md  Task75_Implementation_Summary.md  Task76_Implementation_Summary.md  Task77_Implementation_Summary.md  Task78_Implementation_Summary.md  Task79_Implementation_Summary.md  Task80_Implementation_Summary.md  Tasks_List.md  errors.xml  master_prompt.txt  migration_tasks_config.xml  prompt.md
Project_QT/tests/: CMakeLists_BrushPersistenceTest.txt  sample_brushes.json.in  sample_brushes.xml.in
data/: menubar.xml
data/800/: collections.xml  creature_palette.xml  doodads.xml  item_palette.xml  items.xml  raw_palette.xml  walls.xml
